--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
     </script>
 
 <script type="text/javascript">var switchTo5x=true;</script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+
 <script type="text/javascript">stLight.options({
     url:"flippybitandtheattackofthehexadecimalsfrombase16.com",
     publisher: "737a1842-e4da-496b-9c33-f114a1461920", doNotHash: true, doNotCopy: false, hashAddressBar: false});</script>
   </head>
   <body>
-    <table width="100%">
-        <tr>
-            
-            <td width="100%">
-                <div id="game-container">
+                <div id="game-container" width="100%">
                     <div id="game">
                         <div id="logo"></div>
                         <div id="tap-to-flip"></div>
@@ -55,9 +51,6 @@
                     </div>
                     <div id="border"></div>
                 </div>
-            </td>
-        </tr>
-    </table>
 
     <script>
 	    var scripts = [
